# Nova-Stella

./: Cargo.toml  DESIGN.md  README.md
docs/: Orbital Mechanics Math.ods  mechanics_design.md  neosol-design.md  neosol-mechanics.md  programming_design.md
src/macroquad_client/: main.rs  orbit_gfx_system.rs
src/macroquad_client/ui_state/: configure_game_state.rs  main_menu_state.rs  mod.rs  orbit_view_state.rs  state_machine.rs
src/simulation/: lib.rs
src/simulation/physics/: mod.rs  satellite.rs
